Añade agradecimientos y enlaces

--- a/txt/00.prologo.md
+++ b/txt/00.prologo.md
@@ -46,10 +46,11 @@ A [Manu](https://github.com/Makova) por
 correcciones y a [José Manuel Colella](https://github.com/josecolella)
 por varias aportaciones.
 A [Jesús Leganés](https://github.com/piranna) por
-consejos y revisiones,
+consejos y revisiones, a [Luv0](https://github.com/lulivi) por
+obligarme a ser coherente con lo que digo y 
 a [Gregorio Robles](https://github.com/gregoriorobles) por una extensa
 revisión y consejos para transformar este material en una clase. 
 
-También por supuesto a Jesús Moreno León, codirector del curso de la
+También por supuesto a [Jesús Moreno León](https://programamos.es/author/j-morenol/), codirector del curso de la
 UIMP que fue donde impartí, junto con Gregorio, este material por
 primera vez. 
