Revisando el primer capítulo

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -1,15 +1,16 @@
 # Para empezar a trabajar
 
-Necesitas Python, claro. Python tiene dos versiones en desarrollo: la
+necesitas Python, claro. Python tiene dos versiones en desarrollo: la
 2 y la 3. Aunque en un 90% el código que vamos a usar funcionará
 correctamente en las dos versiones, vamos a trabajar con la
 versión 3. Es muy posible que ya tengas instalado algún programa que
-necesite python. Escribe
+necesite Python y por tanto se encuentre ya en tu sistema, al menos si
+se trata de Linux o MacOS. Escribe
 
 	python --version
 
 en tu línea de órdenes para ver qué versión tienes instalada. Si
-tienes la versión 3, estás listo para hacer los ejercicios del resto del libro. Si no, continúa leyendo después del
+tienes la versión 3, estás listo para hacer todos los ejercicios del resto del libro. Si no, continúa leyendo después del
 interludio siguiente donde te explicaremos cómo trabajar con la línea
 de órdenes de tu sistema operativo, algo que nos va a servir durante el
 resto del libro. 
@@ -22,7 +23,7 @@ puedes trabajar
 [de la misma forma en Windows](https://www.xataka.com/aplicaciones/asi-es-usar-la-consola-bash-de-ubuntu-en-windows-10). En
 las últimas actualizaciones todavía es más fácil,
 pudiendo
-[descargártela desde la Windows Store](https://www.xataka.com/aplicaciones/ubuntu-llega-a-la-windows-store-y-el-matrimonio-microsoft-linux-esta-en-su-mejor-momento),
+[descargarte Ubuntu con su línea de órdenes desde la Windows Store](https://www.xataka.com/aplicaciones/ubuntu-llega-a-la-windows-store-y-el-matrimonio-microsoft-linux-esta-en-su-mejor-momento),
 aunque pare esto tendrás que estar dentro de un programa que se
 denomina *Windows Insider*, por lo que posiblemente sea más fácil
 activar el subsistema Ubuntu como se indica en el primer enlace. Esta
@@ -35,33 +36,38 @@ que hacen de tu experiencia algo mucho más agradable, como esto:
 En cualquier caso, conviene que conozcas algunas cosas básicas del
 intérprete `bash` para ejecutar estos programas
 de una sola línea o simplemente para entrar en Python y empezar a
-ejecutar cosas. Por ejemplo, estos trucos básicos
+teclear órdenes. Por ejemplo, estos trucos básicos
 
-* Te puedes mover por la línea con las flechas, pero también de
+* Te puedes mover por la línea de órdenes con las flechas, pero también de
   palabra en palabra con control →. Control-a te llevará al principio
   de la línea (a es el principio del alfabeto), control-e al final de
-  la línea (*end*, en inglés)
+  la línea (*end*, en inglés).
 
-* Puedes borrar la línea entera con control-k. Para copiar y pegar,
+* Puedes borrar la línea entera con control-k. Para copiar y pegar en
+  una consola en Linux usa
   mayúsculas-control-c y mayúsculas-control-v. Igual que en cualquier
   otro lado, sólo que con el *mayúsculas* por delante.
 
 * ↑ te permitirá acceder a las órdenes anteriores que has ejecutado y
   editarlas. También con control-r podrás comenzar a buscar por
   algunos caracteres que estén en la línea. Por ejemplo, `ctrl-r` +
-  `py` te encontrará la última orden en la que se ha hecho esto.
+  `py` te encontrará la última orden en la que se ha usado esa
+  combinación de teclas.
 
 ![Control-r py](../img/ctrl-r.png)
 
 * Usa siempre el tabulador para completar. En la primera palabra de la
   orden te completará el nombre de la misma, en el resto te completará
-  nombres de ficheros y demás. Usa el tabulador y te ahorrarás teclear
+  nombres de ficheros y demás. Si lo usas te ahorrarás teclear
   un montón. Dependiendo del intérprete que uses, te aparecerán
-  diferentes opciones que podrás seleccionar con el cursor.
+  diferentes opciones que podrás seleccionar con el cursor; en zsh por
+  ejemplo te aparecen los ficheros de un directorio a los que se pueda
+  aplicar la orden que ya se ha tecleado.
 
 La línea de órdenes, que en realidad se denomina *consola* o
 *terminal*, que se usa en los Mac y Linux es la misma, y tiene
-una buena cantidad. Usa [el buscador DuckDuckGo con su servicio de chuletas integrado](https://duckduckgo.com/?q=linux+cheatsheet&t=canonical&ia=cheatsheet) para
+una buena cantidad de funcionalidades que, si se conocen, te pueden
+ayudar a ser bastante productivo. Usa [el buscador DuckDuckGo con su servicio de chuletas integrado](https://duckduckgo.com/?q=linux+cheatsheet&t=canonical&ia=cheatsheet) para
 encontrarla. Las primeras órdenes, `ls`, `rm`, `mkdir`, `cd` van a ser las
 que vas a necesitar con
 seguridad. Mira
@@ -82,13 +88,13 @@ Instálatela de la forma habitual
 
 o
 
-	Install-Package python -Version 3.6.0
+	Install-Package python -Version 3.6.0 
 
-Si usas
+si usas
 el [Package Manager](https://www.nuget.org/packages/python/3.6.0) de
 NuGet para Windows o [`chocolatey`](https://chocolatey.org/), el otro
 gestor de paquetes para Windows. Ninguno de los dos vienen instalados
-en la versión básica, por lo que tendrás que instalártelos antes. Por
+en la versión básica de este sistema operativo, por lo que tendrás que instalártelos antes. Por
 supuesto, también puedes
 descargarte un instalador de 
 [Python para Windows](https://www.python.org/downloads/windows/) de la web.
@@ -107,10 +113,11 @@ desde Linux
 curl -L https://git.io/install-pyenv | bash
 ```
 
-Si eres usuario de docker y no de Python, puedes usar también los
+Si eres usuario de Docker y no de Python, puedes usar también los
 [contenedores oficiales](https://hub.docker.com/_/python/) para
 ejecutar lo que sea, inclusive la línea de órdenes que vamos a usar
-más adelante.
+más adelante. Con Docker tendrás que definir un alias para `python`,
+porque la línea de órdenes va a ser un poco más compleja y larga. 
 
 ## Usando virtualenv
 
@@ -118,7 +125,11 @@ Si quieres trabajar en un entorno en el cual los paquetes que instales están
 aislados de los que están instalados por defecto, se puede utilizar
 lo que es conocido como `virtualenv`. Con `virtualenv` se puede tener entornos
 con módulos que solo están ligados a dicho entorno y no
-afectan al resto del sistema; la principal diferencia con `pyenv` es que en este los módulos se instalan para todos los programas del usuario. En producción será bastante más útil `virtualenv` y conviene conocerlo, pero para el resto de este tutorial es suficiente con las formas de instalación indicadas anteriormente. 
+afectan al resto del sistema; la principal diferencia con `pyenv` es
+que en este los módulos se instalan para todos los programas del
+usuario. En producción será bastante más útil `virtualenv` y conviene
+conocerlo, pero para el resto de este libro es suficiente con las
+formas de instalación indicadas anteriormente.  
 
 Para instalar se utiliza el gestor de módulos en python conocido como `pip`:
 
@@ -141,14 +152,21 @@ virtualenv [en su web](https://virtualenv.pypa.io/en/stable/).
 
 ## Trabajando desde cualquier lugar
 
-Si simplemente quieres ir probando cosas desde tu tablet o un ordenador accesible públicamente, puedes usar [repl.it](https://repl.it/languages/python3), un recurso en la web con REPLs (bucle lee, evalúa, imprime) para un montón de lenguajes, incluyendo Python 2 y 3 y muchos otros lenguajes de los que vamos a usar ejemplos en este tutorial. 
+Si simplemente quieres ir probando cosas desde tu tablet o un
+ordenador accesible públicamente, puedes
+usar [repl.it](https://repl.it/languages/python3), un recurso en la
+web con REPLs (bucle lee, evalúa, imprime) para un montón de
+lenguajes, incluyendo Python 2 y 3 y muchos otros de los que es
+posible que usemos algún ejemplo en este libro. 
 
-> *Ejercicio*: regístrate en `repl.it` usando tu cuenta de Google, Facebook o GitHub. Si no estás registrado en GitHub, quizás sea un buen momento para hacerlo. 
+> *Ejercicio*: regístrate en `repl.it` usando tu cuenta de Google,
+Facebook o GitHub. Si no estás registrado en GitHub, quizás sea un
+buen momento para hacerlo.  
 
 Python, de hecho, está *empotrado* en muchas aplicaciones, como un
 lenguaje que sirve para escribir *plugins* o extensiones. Tal vez  
 
-## Python está en tus programas habituales.
+## Python está incluido en tus programas habituales.
 
 ![En Gimp](../img/python-gimp.png)
 
@@ -161,7 +179,8 @@ permite escribir programas con él si se instala la extensión
 correspondiente,
 y
 [muchas aplicaciones de escritorio y juegos](https://wiki.python.org/moin/AppsWithPythonScripting) permiten
-hacerlo de diferente forma.
+hacerlo de diferente forma, pero siempre dejando acceso a una consola
+desde la que se pueden teclear órdenes en Python. 
 
 Si no tienes ninguna otra cosa, ni Internet, pero sí una copia de
 Gimp, ¡tienes Python! Si tienes de todo, tener Python empotrado en las
@@ -220,7 +239,7 @@ ejecutar y buscando "REPL" aparecerá *Python: Start REPL* que
 arrancará una ventana de órdenes tal como la que aparece más arriba en
 la imagen. Si usas otros editores,
 como
-[Visual Estudio, se le denomina "Ventana interactiva"](https://docs.microsoft.com/en-us/visualstudio/python/interactive-repl) y
+[Visual Studio, se le denomina "Ventana interactiva"](https://docs.microsoft.com/en-us/visualstudio/python/interactive-repl) y
 viene de serie con el mismo. 
 
 ## Concluyendo
