Elimina lo que excede márgenes

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -38,7 +38,8 @@ Las variables deben ser también descriptivas, como la siguiente:
 
 ```Python
 cifras_de = lambda numero: len(str(numero))
-potencias_de_2 = map( lambda num: 2**num, range(20))
+potencias_de_2 
+    = map( lambda num: 2**num, range(20))
 list(map( cifras_de, potencias_de_2 ))
 ```
 
@@ -82,7 +83,8 @@ anterior, pero en este caso una tupla es *inmutable*.
 potencias_de_2.insert(64)
 Traceback (most recent call last):
   File "<stdin>", line 1, in <module>
-AttributeError: 'tuple' object has no attribute 'insert'
+AttributeError: 
+    'tuple' object has no attribute 'insert'
 ```
 
 Sin embargo, se puede hacer:
@@ -124,7 +126,8 @@ de eso; sin embargo, cuando tratamos de ejecutarlo desde la línea de
 habitual, siempre tendrá que estar envuelto en una orden `print`:
 
 ```bash
-python -c "print(list(map(lambda n: n/2 == n//2, \
+python -c \
+  "print(list(map(lambda n: n/2 == n//2, \
   range(1000))))"
 ```
 
@@ -133,7 +136,8 @@ así que es mejor que los separemos con retornos de carro, es decir, un
 carácter que ponga cada resultado en una línea
 
 ```bash
-python -c "print('\n'.join(map(lambda n: str( n/2 == n//2 ), \
+python -c \
+  "print('\n'.join(map(lambda n: str( n/2 == n//2 ), \
   range(1000))))"
 ```
 
@@ -145,7 +149,8 @@ cada uno de los elementos del `range`. No demasiado bueno. Vamos a
 *sacarlo fuera del bucle*, y definirlo una sola vez:
 
 ```bash
-python -c "es_par = lambda n: str(n/2 == n//2); \
+python -c \
+  "es_par = lambda n: str(n/2 == n//2); \
   print('\n'.join(map(es_par, range(1000))))"
 ```
 Hemos definido la función `es_par`, pero ahora nos encontramos con dos
@@ -171,8 +176,9 @@ dándonos la temporización. Y lo podemos usar directamente desde la
 línea de órdenes, de la forma siguiente:
 
 ```
-python -m timeit -s "print('\n'.join(map(lambda n: str( n/2 == n//2 ),
-range(1000))))"
+python -m timeit -s \
+  "print('\n'.join(map(lambda n: str( n/2 == n//2 ),
+  range(1000))))"
 ```
 
 lo que ejecutará el programa; con `-m` se le indica el nombre del
@@ -204,9 +210,10 @@ Y vamos a medir las dos formas (incluyo `\` para indicar continuación
 de la línea, puede teclearse en la misma línea si es necesario):
 
 ```Python
-timeit(setup="map(lambda n: str( n/2 == n//2 ), range(1000))")
+timeit(setup="map(lambda n: str( n/2 == n//2 ), 
+  range(1000))")
 0.006306399000095553
-timeit(setup="es_par = lambda n: str(n/2 == n//2); \
+timeit(setup="es_par = lambda n: str(n/2 == n//2);
   map(es_par, range(1000))")
 0.006795324999984587
 ```
@@ -218,10 +225,11 @@ de la misma forma para todos los valores. Multipliquemos por 10 el
 número de elementos:
 
 ```Python
-timeit(setup="es_par = lambda n: str(n/2 == n//2); \
+timeit(setup="es_par = lambda n: str(n/2 == n//2);
   map(es_par, range(10000))")
 0.006140023999250843
-timeit(setup="map(lambda n: str( n/2 == n//2 ), range(10000))")
+timeit(setup="map(lambda n: str( n/2 == n//2 ), 
+  range(10000))")
 0.008905056998628424
 ```
 El panorama cambia bastante, con la primera forma, como era de
@@ -230,7 +238,8 @@ importa el número de veces que se define. Incluso podemos probar otro
 test de *paridad*
 
 ```Python
-timeit(setup="es_par = lambda n: str(n^1 == 0); \
+timeit(setup="es_par = 
+  lambda n: str(n^1 == 0); 
   map(es_par, range(10000))")
 0.006006274999890593
 ```
@@ -295,9 +304,12 @@ múltiplo de tres si la cifra resultante es 3 o 9.
 
 ```Python
 suma_cifras = lambda n:  sum(map(int,list(str(n))))
-def is_multiple_of_3(n): sum = suma_cifras(n); \
-  return is_multiple_of_3(sum) if (sum >= 10) \
-  else (True  if (sum==3) or (sum==9) else False)
+def is_multiple_of_3(n): 
+  sum = suma_cifras(n);
+  return is_multiple_of_3(sum) 
+    if (sum >= 10) 
+    else (True  if (sum==3) or (sum==9) 
+	     else False)
 ```
 
 Tenemos también dos formas diferentes de definir funciones. Primero,
@@ -469,8 +481,8 @@ que se puede aplicar sobre los mismos, así que podemos definir
 funciones de esta forma:
 
 ```Python
-def juega( mano ): return mano['estrategia'](mano['mano'])
-
+def juega( mano ): 
+    return mano['estrategia'](mano['mano'])
 ```
 
 que directamente aplicaría la "estrategia" que hayamos decidido, y que
@@ -483,7 +495,8 @@ from random import random
 juego_ricky = {
   'jugador'   :'Ricky',
   'mano'      : ['3♠','4♣','A♥'],
-  'estrategia': lambda mano: mano[int(random()*len(mano))] }
+  'estrategia': 
+    lambda mano: mano[int(random()*len(mano))] }
 
 juega(juego_ricky)
 '3♠'
@@ -506,7 +519,8 @@ específicos de dominio como el que incluye PowerShell. Este script,
 por ejemplo, define una tabla hash o diccionario:
 
 ```PowerShell
-$juego_ricky = @{ "jugador" = "Ricky"; "mano" = @("3♠","4♣","A♥")}
+$juego_ricky = @{ "jugador" = "Ricky"; 
+               "mano" = @("3♠","4♣","A♥")}
 $juego_ricky
 ```
 
