--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -164,7 +164,12 @@ A estos podemos añadir `zip`, que junto con `sorted` nos puede ayudar
 a comparar dos manos de cartas:
 
 ```Python
-list(zip(sorted(['3♠','4♣','A♥']),sorted(['7♣', '7♥', '7♦'])))
+list(
+  zip(
+    sorted(['3♠','4♣','A♥']),
+	sorted(['7♣', '7♥', '7♦'])
+  )
+)
 [('3♠', '7♣'), ('4♣', '7♥'), ('A♥', '7♦')]
 ```
 
@@ -207,7 +212,8 @@ antes, pero la podemos usar fácilmente de esta forma:
 ```Python
 from functools import reduce
 def fact(n): \
-  return reduce( lambda prev,this: prev*this, range(1,n+1),1)
+  return 
+    reduce( lambda prev,this: prev*this, range(1,n+1),1)
 ```
 
 La función factorial, definida de esta forma, funciona exactamente
@@ -306,7 +312,8 @@ con igual probabilidad pares o impares.
 ```Python
 from random import random
 aleatorios = [int(random()*10000) for _ in range(10000)]
-def cuenta_pares( prev, this ): prev[this&1 ] += 1; return prev;
+def cuenta_pares( prev, this ): 
+    prev[this&1 ] += 1; return prev;
 from functools import reduce
 reduce( cuenta_pares, aleatorios, [0,0])
 ```
