--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -72,7 +72,8 @@ que se parezca más al funcional que a otra cosa. Pero hay lenguajes
 funcionales, como Clojure, donde esto se ve de forma más explícita:
 
 ```Clojure
-user=> ((fn [zipi zape] (str zipi " " zape)) "þor" "es poderoso")
+user=> 
+  ((fn [zipi zape] (str zipi " " zape)) "þor" "es poderoso")
 "þor es poderoso"
 ```
 
@@ -267,7 +268,12 @@ También se pueden usar funciones ya definidas por Python. Por ejemplo,
 `len` devuelve la longitud de un objeto:
 
 ```Python
-list(map(len,['●●●', '●●●●●●●●●●●●●●●', '●●', '●●●●●●●', '●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●'])
+list(
+  map(
+    len,['●●●', 
+	     '●●●●●●●●●●●●●●●', '●●', '●●●●●●●', 
+		 '●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●']
+  )
 [3, 15, 2, 7, 33]
 ```
 
