Amplía el prólogo

--- a/txt/00.prologo.md
+++ b/txt/00.prologo.md
@@ -31,7 +31,30 @@ conseguirla. Aconsejamos repetir, copiando y pegando, los ejemplos, y
 hacer los ejercicios, publicándolos con el hashtag `#1linepy`. De vez
 en cuando le echaré un vistazo y likearé a destajo. 
 
-No es un manual exhaustivo de programación en Python. A partir de aquí
+También este libro es totalmente autoeditado, libre con una licencia
+Creative Commons y está disponible
+en [GitHub](https://github.com/JJ/1linepy). Aunque el concepto del
+libro es peculiar en varias cosas, por ejemplo, en como se colocan los
+títulos a las secciones, que a veces continúan las líneas anteriores y
+cosas así, es posible que haya ciertas erratas, sobre todo en el
+manejo de caracteres Unicode y en la versión en papel. Te agradeceré
+que me lo [hagas llegar](https://github.com/JJ/1linepy/issues) y por
+supuesto serás correspondido con un agradecimiento en la siguiente
+edición en libro. 
+
+No es un manual exhaustivo de programación en Python; es un libro
+bastante básico, sobre todo para los que conozcan los rudimentos de la
+programación, pero que quieran aprender cómo se aplican esos conceptos
+en Python. Por eso tiene ejemplos en diferentes lenguajes de
+programación, para que se entienda el concepto y su estructura y,
+sobre todo, para que se aprenda a pensar en funciones, no en
+sintaxis. Es mejor intuir cómo se hace algo, que luego la sintaxis se
+puede buscar usando Google. También trata de transmitir la idea de la
+programación no es sólo para programar. Es para crear filtros para
+Gimp o animaciones con Blender. Python sirve para todo ello.
+
+
+Posiblemente, para todo ello también necesites algún otro libro. A partir de este
 puedes pasar
 a
 [Python paso a paso, de Ángel Pablo Hinojosa](http://amzn.to/2tt6xZT),
