Corrige un montón de cosas

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -135,7 +135,9 @@ export PATH=$PATH:~/.local/bin
 ```
 
 desde el shell para que se pueda usar directamente, o bien, como se ha
-indicado en el primer capítulo, instalar `pyenv` para tener la versión
+indicado en el primer capítulo,
+
+* instalar `pyenv` para tener la versión
 de Python que se desee. `bpython` en esta instalación irá así:
 
 ![bpython en Azure](../img/bpython-azure.png)
@@ -334,8 +336,8 @@ tipo de asignación + operador se suele encontrar en prácticamente
 todos los lenguajes de programación; por ejemplo, en Ruby:
 
 ```Ruby
-$a = [1,2,3]⤶
-$a += [4]⤶
+$a = [1,2,3]
+$a += [4]
 [1, 2, 3, 4]
 ```
 
@@ -344,9 +346,9 @@ designarse. Sin embargo, muchos lenguajes usan también algunos
 operadores *posfijo*, detrás de la variable. En Perl, por ejemplo
 
 ```Perl
-$matricula = 'AA'⤶
-$matricula++⤶
-print $matricula⤶
+$matricula = 'AA'
+$matricula++
+print $matricula
 AB
 ```
 
