Reajusta para márgenes

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -75,9 +75,9 @@ tarjeta de crédito para darse de alta en la evaluación gratuita, pero
 si estás en un centro de enseñanza es posible que tengan créditos
 gratis.
 
-También para experimentar puedes usar [Cloud9](http://c9.io). Aunque
-es en realidad un entorno de desarrollo colaborativo, permite acceder
-a la línea de órdenes desde el navegador, lo que nos permitirá
+También para experimentar puedes usar el sitio de programación
+colaborativa [Cloud9](http://c9.io); que permite acceder a una línea
+de órdenes desde el navegador, lo que nos permitirá 
 trabajar con ella fácilmente, aunque sea por un tiempo limitado. Te
 puedes dar de alta, eso sí con una tarjeta de crédito, y usando tu ID
 de GitHub. Una vez dado de alta, se crea un *workspace* en Python con
