Añade puntos suspensivos

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -141,7 +141,7 @@ empezando a usar el potencial completo de Unicode, pero algunos
 lenguajes, como Python y JavaScript (que también dará un error)
 todavía no han llegado a hacerlo.
 
-Afortunadamente, Python no sólo trabaja con números. También puede
+Afortunadamente, Python no sólo trabaja con números. También puede... 
 
 ## Trabajar con cualquier tipo de caracteres
 
