Corrección de errata

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -264,7 +264,7 @@ algoritmos de otra forma. Por ejemplo, usando
 Se habla de recursión cuando una función se llama a sí misma. En
 programación funcional, resolver un problema usando recursión es la forma *normal* de hacer las cosas,
 suplantando la repetición. Uno de los principios de este tipo de
-programación es que las funcionen no tienen efectos secundarios; con
+programación es que las funciones no tienen efectos secundarios; con
 la recursión se consigue *pasar* el estado como parámetro de una
 función sin tener que *guardarlo* en ningún momento.
 
