Extendida la definición de múltiplo de 3 a otro lugar en el que se hacía referencia

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -345,7 +345,7 @@ estamos tratando de condensar todo el Python posible en una sola
 línea, así que se perdona esta pequeña digresión, sobre todo porque la
 recursión queda más evidente. Si tiene más de una cifra (mayor que
 10), se sigue aplicando de forma recursiva. Si no, ya podemos
-comprobar si es o no múltiplo de 3: ¿es 3 o 9? Se devuelve `True`;
+comprobar si es o no múltiplo de 3: ¿es 3, 6 o 9? Se devuelve `True`;
 o `False` en caso contrario. El `return` al principio de la llamada
 recursiva es el que finalmente recoge el resultado. Al trabajar en el
 REPL habrá que pulsar ⤶ para indicar que termina ahí.
